navbar code style

--- a/index.html
+++ b/index.html
@@ -8,5 +8,45 @@
 </head>
 <body>
     
+    <header class="header">
+        <nav class="navbar">
+
+            <div class="navbar-brand">
+                <div class="navbar-brand-img">
+                    <img src="assets/logo.png" alt="">
+                </div>
+                <div class="navbar-brand-name">
+                    <h2 class="black">BKM SCHOOL</h2>
+                </div>
+            </div>
+
+            <div class="navbar-menu-container">
+                <ul>
+                    <li><a href="#" class="navbar-menu-home orange font-size1">Home</a></li>
+                    <li><a href="#" class="navbar-menu-about skyblue font-size1">About</a></li>
+                    <li><a href="#" class="navbar-menu-facilities font-size1">Facilites</a></li>
+                    <li><a href="#" class="navbar-menu-admission font-size1">Admission</a></li>
+                </ul>
+            </div>
+
+            <div class="navbar-btn">
+                <button class="btn-primary font-size1">Contact</button>
+            </div>
+
+        </nav>
+
+    </header>
+
+
+
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
