--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <title>BKM School</title>
 </head>
 <body>
     
-    <header class="header">
+    <header class="header quicksand-font">
         <nav class="navbar">
 
             <div class="navbar-brand">
@@ -33,6 +40,10 @@
                 <button class="btn-primary font-size1">Contact</button>
             </div>
 
+            <div class="menu-bar">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+
         </nav>
 
     </header>
@@ -47,6 +58,8 @@
     <footer>
 
     </footer>
+
+
 
 </body>
 </html>
