banner area code style

--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 
         </nav>
 
+
+        <div class="banner">
+            <div class="banner-text-container">
+                <h1 class="banner-text-container-title"><span class="orange">Empowering</span> students from small age <span class="skyblue">towards vision</span></h1>
+
+                <p class="banner-text-container-description font-size1 black">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+
+                <button class="btn-primary font-size1">Enroll Now</button>
+            </div>
+
+            <div class="banner-img-container">
+                <img src="assets/hero-kids.png" alt="">
+            </div>
+
+        </div>
+
     </header>
 
 
