--- a/index.html
+++ b/index.html
@@ -67,9 +67,56 @@
 
 
 
+
     <main>
+        <section class="curriculum-section">
+            <h2 class="quicksand-font">Standard Curriculum</h2>
+
+            <div class="curriculum-card-container">
+                <div class="curriculum-single-card kinder-container">
+                    <div class="curriculum-img-container">
+                        <img src="assets/kinder.png" class="curriculum-single-card-img" alt="">
+                    </div>
+                    <h3 class="curriculum-single-card-title quicksand-font">Kinder (3-6) Years</h3>
+                    <p class="curriculum-single-card-description work-sans-font">kindergarten, educational division, a supplement to elementary school intended to accommodate children between the ages of four and six years.</p>
+
+                    <button class="quicksand-font kinder-btn">Read More</button>
+                </div>
+
+                <div class="curriculum-single-card elementary-container">
+                    <div class="curriculum-img-container">
+                        <img src="assets/elementary.png" class="curriculum-single-card-img" alt="">
+                    </div>
+                    <h3 class="curriculum-single-card-title quicksand-font">Elementary School</h3>
+                    <p class="curriculum-single-card-description work-sans-font">An elementary school is a school where children are taught for the first six or sometimes eight years of their education. [mainly US] ...the move from elementary school to middle school or junior high.</p>
+
+                    <button class="quicksand-font elementary-btn">Read More</button>
+                </div>
+
+                <div class="curriculum-single-card middle-container">
+                    <div class="curriculum-img-container">
+                        <img src="assets/middle.png" class="curriculum-single-card-img" alt="">
+                    </div>
+                    <h3 class="curriculum-single-card-title quicksand-font">Middle (10-16) Years</h3>
+                    <p class="curriculum-single-card-description work-sans-font">The Middle School comprises Grades 6 through 10 which caters for students between the ages of 11 and 16 years of age. Teaching and learning is based on the International Baccalaureate Middle Years Programme (MYP) framework .</p>
+
+                    <button class="quicksand-font middle-btn">Read More</button>
+                </div>
+
+            </div>
+
+            <div class="curriculum-icon">
+                <i class="fa-solid fa-less-than"></i>
+                <i class="fa-solid fa-greater-than"></i>
+            </div>
+
+        </section>
+
+        
 
     </main>
+
+
 
     <footer>
 
