footer section responsive code style

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     
     <header class="header quicksand-font">
+        <marquee behavior="" direction="">Welcome our " BKM Online School". </marquee>
         <nav class="navbar">
 
             <div class="navbar-brand">
